@@ -1,6 +1,6 @@
 ﻿# CareCircle - Medicine Care Team App
 
-![Version](https://img.shields.io/badge/version-3.5.0-blue.svg)
+![Version](https://img.shields.io/badge/version-3.6.0-blue.svg)
 ![License](https://img.shields.io/badge/license-MIT-green.svg)
 
 ## 📋 Project Overview
@@ -489,5 +489,5 @@ For questions or issues, please review the documentation files:
 ---
 
 **Last Updated**: December 27, 2025
-**Version**: 3.5.0
+**Version**: 3.6.0
 **Status**: ✅ Production Ready
