@@ -1,6 +1,6 @@
 {
   "name": "carecircle",
-  "version": "3.5.0",
+  "version": "3.6.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
