@@ -10,3 +10,4 @@ Step 9: Version 3.3.0 Release - Added "As Needed" medications, Skip Dose functio
 Step 10: Version 3.4.0 Release - Added Drag-and-Drop medication reordering, Mobile-friendly UI improvements, Status badges moved to top-left, "8 oz" spacing fix, Mandatory medication flag with Yes/No dialog, and Real-time refresh across devices.
 Step 11: Version 3.4.1 Patch - Fixed medication positioning logic (new items at top), corrected "8 oz" button spacing in web app, and resolved schema cache issues.
 Step 12: Version 3.5.0 Release - Added User Logon Count logic for "How to Use" visibility, New Message focus and flash effect, and Midnight Reset for Water/Juice goals and history.
+Step 13: Version 3.6.0 Release - Refined message notification logic with improved flash timing and scroll behavior, removed debug info for cleaner interface, and updated documentation.
